[package]
name = "playthelisttest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
urlencoding = "2.1.0"
